--- a/.github/workflows/MonitoringOperator.yml
+++ b/.github/workflows/MonitoringOperator.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v1
       with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
     - name: Set up gcloud
       uses: google-github-actions/setup-gcloud@v1
