--- a/.github/workflows/MonitoringOperator.yml
+++ b/.github/workflows/MonitoringOperator.yml
@@ -1,4 +1,4 @@
-name: Deploy Targeted Monitoring to GKE Cluster
+name: Deploy Minimal Pod Monitoring
 on:
   workflow_dispatch:
 
@@ -29,22 +29,281 @@ jobs:
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER_NAME --region $GKE_REGION
 
-    - name: Deploy Targeted Prometheus
+    # Prometheus Config
+    - name: Deploy Prometheus Config
       run: |
-        kubectl apply -f graphana-prometheus-stack.yaml
-        if [ $? -ne 0 ]; then
-          echo "Deployment failed"
-          exit 1
-        fi
-        
+        cat <<EOF | kubectl apply -n $NAMESPACE -f -
+        apiVersion: v1
+        kind: ConfigMap
+        metadata:
+          name: prometheus-config
+        data:
+          prometheus.yml: |
+            global:
+              scrape_interval: 60s
+              evaluation_interval: 60s
+            
+            scrape_configs:
+            - job_name: 'frontend'
+              metrics_path: '/metrics'
+              kubernetes_sd_configs:
+              - role: pod
+              relabel_configs:
+              - source_labels: [__meta_kubernetes_pod_label_app]
+                regex: receipt-frontend
+                action: keep
+              - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+                regex: ([^:]+)(?::\d+)?;(\d+)
+                replacement: \${1}:\${2}
+                target_label: __address__
+            - job_name: 'backend'
+              metrics_path: '/actuator/prometheus'
+              kubernetes_sd_configs:
+              - role: pod
+              relabel_configs:
+              - source_labels: [__meta_kubernetes_pod_label_app]
+                regex: receipt-backend
+                action: keep
+              - source_labels: [__address__]
+                target_label: __address__
+                replacement: \${1}:9090
+        EOF
+
+    # Prometheus Deployment
+    - name: Deploy Prometheus
+      run: |
+        cat <<EOF | kubectl apply -n $NAMESPACE -f -
+        apiVersion: apps/v1
+        kind: Deployment
+        metadata:
+          name: prometheus
+        spec:
+          replicas: 1
+          selector:
+            matchLabels:
+              app: prometheus
+          template:
+            metadata:
+              labels:
+                app: prometheus
+            spec:
+              containers:
+              - name: prometheus
+                image: prom/prometheus:v2.37.0
+                args:
+                - "--config.file=/etc/prometheus/prometheus.yml"
+                - "--storage.tsdb.retention.time=12h"
+                ports:
+                - containerPort: 9090
+                resources:
+                  limits:
+                    cpu: "200m"
+                    memory: "200Mi"
+                  requests:
+                    cpu: "100m"
+                    memory: "100Mi"
+                volumeMounts:
+                - name: config-volume
+                  mountPath: /etc/prometheus
+              volumes:
+              - name: config-volume
+                configMap:
+                  name: prometheus-config
+        EOF
+
+    # Grafana Configuration
+    - name: Deploy Grafana Config
+      run: |
+        cat <<EOF | kubectl apply -n $NAMESPACE -f -
+        apiVersion: v1
+        kind: ConfigMap
+        metadata:
+          name: grafana-provisioning-datasources
+          labels:
+            app: grafana
+        data:
+          datasources.yaml: |-
+            apiVersion: 1
+            datasources:
+            - name: Prometheus
+              type: prometheus
+              access: proxy
+              url: http://prometheus:9090
+              isDefault: true
+              version: 1
+              editable: false
+              jsonData:
+                timeInterval: "30s"
+
+        ---
+        apiVersion: v1
+        kind: ConfigMap
+        metadata:
+          name: grafana-provisioning-dashboards
+          labels:
+            app: grafana
+        data:
+          dashboard-provider.yaml: |-
+            apiVersion: 1
+            providers:
+            - name: 'default'
+              orgId: 1
+              folder: ''
+              type: file
+              disableDeletion: true
+              editable: true
+              options:
+                path: /var/lib/grafana/dashboards
+
+        ---
+        apiVersion: v1
+        kind: ConfigMap
+        metadata:
+          name: grafana-dashboards
+          labels:
+            app: grafana
+        data:
+          pod-status.json: |-
+            {
+              "title": "Pod Status Monitor",
+              "tags": ["kubernetes", "pods"],
+              "timezone": "browser",
+              "panels": [
+                {
+                  "title": "Pod Status Overview",
+                  "type": "stat",
+                  "datasource": "Prometheus",
+                  "gridPos": {"x": 0, "y": 0, "w": 24, "h": 8},
+                  "targets": [
+                    {
+                      "expr": "up{job='frontend'} or up{job='backend'}",
+                      "legendFormat": "{{pod}}",
+                      "refId": "A"
+                    }
+                  ],
+                  "options": {
+                    "colorMode": "value",
+                    "graphMode": "area",
+                    "justifyMode": "auto",
+                    "orientation": "auto",
+                    "reduceOptions": {
+                      "calcs": ["lastNotNull"],
+                      "fields": "",
+                      "values": false
+                    },
+                    "textMode": "auto"
+                  },
+                  "fieldConfig": {
+                    "defaults": {
+                      "color": {
+                        "mode": "thresholds"
+                      },
+                      "thresholds": {
+                        "mode": "absolute",
+                        "steps": [
+                          {"color": "red", "value": null},
+                          {"color": "green", "value": 1}
+                        ]
+                      }
+                    }
+                  }
+                }
+              ]
+            }
+        EOF
+
+    # Grafana Deployment
+    - name: Deploy Grafana
+      run: |
+        cat <<EOF | kubectl apply -n $NAMESPACE -f -
+        apiVersion: apps/v1
+        kind: Deployment
+        metadata:
+          name: grafana
+        spec:
+          replicas: 1
+          selector:
+            matchLabels:
+              app: grafana
+          template:
+            metadata:
+              labels:
+                app: grafana
+            spec:
+              containers:
+              - name: grafana
+                image: grafana/grafana:8.5.5
+                env:
+                - name: GF_SECURITY_ADMIN_USER
+                  value: "admin"
+                - name: GF_SECURITY_ADMIN_PASSWORD
+                  value: "admin"
+                - name: GF_USERS_ALLOW_SIGN_UP
+                  value: "false"
+                - name: GF_AUTH_ANONYMOUS_ENABLED
+                  value: "true"
+                ports:
+                - containerPort: 3000
+                readinessProbe:
+                  httpGet:
+                    path: /api/health
+                    port: 3000
+                  initialDelaySeconds: 10
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                livenessProbe:
+                  httpGet:
+                    path: /api/health
+                    port: 3000
+                  initialDelaySeconds: 30
+                  periodSeconds: 10
+                volumeMounts:
+                - name: grafana-datasources
+                  mountPath: /etc/grafana/provisioning/datasources
+                  readOnly: true
+                - name: grafana-dashboards
+                  mountPath: /var/lib/grafana/dashboards
+                  readOnly: true
+                - name: grafana-dashboard-providers
+                  mountPath: /etc/grafana/provisioning/dashboards
+                  readOnly: true
+                resources:
+                  limits:
+                    cpu: "100m"
+                    memory: "100Mi"
+                  requests:
+                    cpu: "50m"
+                    memory: "50Mi"
+              volumes:
+              - name: grafana-datasources
+                configMap:
+                  name: grafana-provisioning-datasources
+              - name: grafana-dashboards
+                configMap:
+                  name: grafana-dashboards
+              - name: grafana-dashboard-providers
+                configMap:
+                  name: grafana-provisioning-dashboards
+        ---
+        apiVersion: v1
+        kind: Service
+        metadata:
+          name: grafana
+        spec:
+          ports:
+          - port: 80
+            targetPort: 3000
+          selector:
+            app: grafana
+          type: LoadBalancer
+        EOF
+
     - name: Verify Deployment
       run: |
-        kubectl get pods -n $NAMESPACE
+        echo "Waiting for Grafana to be ready..."
+        kubectl wait --for=condition=available deployment/grafana -n $NAMESPACE --timeout=120s
         echo -e "\nGrafana will be available at:"
         echo "http://$(kubectl get svc -n $NAMESPACE grafana -o jsonpath='{.status.loadBalancer.ingress[0].ip}')"
-        echo "Use admin/admin to login"
-
-    - name: Verify Services
-      run: |
-        kubectl wait --for=condition=ready pod -l app=prometheus -n $NAMESPACE --timeout=300s
-        kubectl wait --for=condition=ready pod -l app=grafana -n $NAMESPACE --timeout=300s
+        echo "Login with admin/admin"
+        echo -e "\nDashboard should be automatically available under 'Pod Status Monitor'"
+        echo "If dashboard doesn't appear immediately, wait 1-2 minutes for Grafana to load it"
