--- a/.github/workflows/MonitoringOperator.yml
+++ b/.github/workflows/MonitoringOperator.yml
@@ -29,133 +29,15 @@ jobs:
       run: |
         gcloud container clusters get-credentials $GKE_CLUSTER_NAME --region $GKE_REGION
 
-    # Prometheus Config
-    - name: Deploy Prometheus Config
+    # Deploy main monitoring stack
+    - name: Deploy Monitoring Stack
+      run: |
+        kubectl apply -f Monitoring/graphana-prometheus-stack.yaml -n $NAMESPACE
+
+    # Add additional Grafana dashboards
+    - name: Deploy Additional Grafana Dashboards
       run: |
         cat <<EOF | kubectl apply -n $NAMESPACE -f -
-        apiVersion: v1
-        kind: ConfigMap
-        metadata:
-          name: prometheus-config
-        data:
-          prometheus.yml: |
-            global:
-              scrape_interval: 60s
-              evaluation_interval: 60s
-            
-            scrape_configs:
-            - job_name: 'frontend'
-              metrics_path: '/metrics'
-              kubernetes_sd_configs:
-              - role: pod
-              relabel_configs:
-              - source_labels: [__meta_kubernetes_pod_label_app]
-                regex: receipt-frontend
-                action: keep
-              - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
-                regex: ([^:]+)(?::\d+)?;(\d+)
-                replacement: \${1}:\${2}
-                target_label: __address__
-            - job_name: 'backend'
-              metrics_path: '/actuator/prometheus'
-              kubernetes_sd_configs:
-              - role: pod
-              relabel_configs:
-              - source_labels: [__meta_kubernetes_pod_label_app]
-                regex: receipt-backend
-                action: keep
-              - source_labels: [__address__]
-                target_label: __address__
-                replacement: \${1}:9090
-        EOF
-
-    # Prometheus Deployment
-    - name: Deploy Prometheus
-      run: |
-        cat <<EOF | kubectl apply -n $NAMESPACE -f -
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: prometheus
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              app: prometheus
-          template:
-            metadata:
-              labels:
-                app: prometheus
-            spec:
-              containers:
-              - name: prometheus
-                image: prom/prometheus:v2.37.0
-                args:
-                - "--config.file=/etc/prometheus/prometheus.yml"
-                - "--storage.tsdb.retention.time=12h"
-                ports:
-                - containerPort: 9090
-                resources:
-                  limits:
-                    cpu: "200m"
-                    memory: "200Mi"
-                  requests:
-                    cpu: "100m"
-                    memory: "100Mi"
-                volumeMounts:
-                - name: config-volume
-                  mountPath: /etc/prometheus
-              volumes:
-              - name: config-volume
-                configMap:
-                  name: prometheus-config
-        EOF
-
-    # Grafana Configuration
-    - name: Deploy Grafana Config
-      run: |
-        cat <<EOF | kubectl apply -n $NAMESPACE -f -
-        apiVersion: v1
-        kind: ConfigMap
-        metadata:
-          name: grafana-provisioning-datasources
-          labels:
-            app: grafana
-        data:
-          datasources.yaml: |-
-            apiVersion: 1
-            datasources:
-            - name: Prometheus
-              type: prometheus
-              access: proxy
-              url: http://prometheus:9090
-              isDefault: true
-              version: 1
-              editable: false
-              jsonData:
-                timeInterval: "30s"
-
-        ---
-        apiVersion: v1
-        kind: ConfigMap
-        metadata:
-          name: grafana-provisioning-dashboards
-          labels:
-            app: grafana
-        data:
-          dashboard-provider.yaml: |-
-            apiVersion: 1
-            providers:
-            - name: 'default'
-              orgId: 1
-              folder: ''
-              type: file
-              disableDeletion: true
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards
-
-        ---
         apiVersion: v1
         kind: ConfigMap
         metadata:
@@ -176,7 +58,7 @@ jobs:
                   "gridPos": {"x": 0, "y": 0, "w": 24, "h": 8},
                   "targets": [
                     {
-                      "expr": "up{job='frontend'} or up{job='backend'}",
+                      "expr": "up{job='receipt-backend'} or up{job='receipt-frontend'}",
                       "legendFormat": "{{pod}}",
                       "refId": "A"
                     }
@@ -212,98 +94,14 @@ jobs:
             }
         EOF
 
-    # Grafana Deployment
-    - name: Deploy Grafana
+    # Wait for deployments to be ready
+    - name: Wait for Deployments
       run: |
-        cat <<EOF | kubectl apply -n $NAMESPACE -f -
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: grafana
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              app: grafana
-          template:
-            metadata:
-              labels:
-                app: grafana
-            spec:
-              containers:
-              - name: grafana
-                image: grafana/grafana:8.5.5
-                env:
-                - name: GF_SECURITY_ADMIN_USER
-                  value: "admin"
-                - name: GF_SECURITY_ADMIN_PASSWORD
-                  value: "admin"
-                - name: GF_USERS_ALLOW_SIGN_UP
-                  value: "false"
-                - name: GF_AUTH_ANONYMOUS_ENABLED
-                  value: "true"
-                ports:
-                - containerPort: 3000
-                readinessProbe:
-                  httpGet:
-                    path: /api/health
-                    port: 3000
-                  initialDelaySeconds: 10
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                livenessProbe:
-                  httpGet:
-                    path: /api/health
-                    port: 3000
-                  initialDelaySeconds: 30
-                  periodSeconds: 10
-                volumeMounts:
-                - name: grafana-datasources
-                  mountPath: /etc/grafana/provisioning/datasources
-                  readOnly: true
-                - name: grafana-dashboards
-                  mountPath: /var/lib/grafana/dashboards
-                  readOnly: true
-                - name: grafana-dashboard-providers
-                  mountPath: /etc/grafana/provisioning/dashboards
-                  readOnly: true
-                resources:
-                  limits:
-                    cpu: "100m"
-                    memory: "100Mi"
-                  requests:
-                    cpu: "50m"
-                    memory: "50Mi"
-              volumes:
-              - name: grafana-datasources
-                configMap:
-                  name: grafana-provisioning-datasources
-              - name: grafana-dashboards
-                configMap:
-                  name: grafana-dashboards
-              - name: grafana-dashboard-providers
-                configMap:
-                  name: grafana-provisioning-dashboards
-        ---
-        apiVersion: v1
-        kind: Service
-        metadata:
-          name: grafana
-        spec:
-          ports:
-          - port: 80
-            targetPort: 3000
-          selector:
-            app: grafana
-          type: LoadBalancer
-        EOF
+        kubectl rollout status deployment/prometheus -n $NAMESPACE
+        kubectl rollout status deployment/grafana -n $NAMESPACE
 
-    - name: Verify Deployment
+    # Verify services are running
+    - name: Verify Services
       run: |
-        echo "Waiting for Grafana to be ready..."
-        kubectl wait --for=condition=available deployment/grafana -n $NAMESPACE --timeout=120s
-        echo -e "\nGrafana will be available at:"
-        echo "http://$(kubectl get svc -n $NAMESPACE grafana -o jsonpath='{.status.loadBalancer.ingress[0].ip}')"
-        echo "Login with admin/admin"
-        echo -e "\nDashboard should be automatically available under 'Pod Status Monitor'"
-        echo "If dashboard doesn't appear immediately, wait 1-2 minutes for Grafana to load it"
+        kubectl get pods -n $NAMESPACE -l app=prometheus
+        kubectl get pods -n $NAMESPACE -l app=grafana
