--- a/.github/workflows/MonitoringOperator.yml
+++ b/.github/workflows/MonitoringOperator.yml
@@ -34,6 +34,31 @@ jobs:
       run: |
         kubectl apply -f graphana-prometheus-stack.yaml -n $NAMESPACE
 
+    # Add Grafana datasource configuration
+    - name: Configure Grafana Datasource
+      run: |
+        cat <<EOF | kubectl apply -n $NAMESPACE -f -
+        apiVersion: v1
+        kind: ConfigMap
+        metadata:
+          name: grafana-datasources
+          labels:
+            app: grafana
+        data:
+          datasources.yaml: |-
+            apiVersion: 1
+            datasources:
+            - name: Prometheus
+              type: prometheus
+              access: proxy
+              url: http://prometheus-service:9090
+              isDefault: true
+              version: 1
+              editable: false
+              jsonData:
+                timeInterval: "30s"
+        EOF
+
     # Add additional Grafana dashboards
     - name: Deploy Additional Grafana Dashboards
       run: |
@@ -105,3 +130,9 @@ jobs:
       run: |
         kubectl get pods -n $NAMESPACE -l app=prometheus
         kubectl get pods -n $NAMESPACE -l app=grafana
+
+    # Restart Grafana to apply new configurations
+    - name: Restart Grafana
+      run: |
+        kubectl rollout restart deployment/grafana -n $NAMESPACE
+        kubectl rollout status deployment/grafana -n $NAMESPACE
