--- a/graphana-prometheus-stack.yaml
+++ b/graphana-prometheus-stack.yaml
@@ -1,223 +1,266 @@
-name: Deploy Minimal Pod Monitoring
-on:
-  workflow_dispatch:
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: prometheus-sa
+  namespace: dev
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: prometheus-cluster-role
+rules:
+  - apiGroups: [""]
+    resources: ["nodes", "nodes/proxy", "services", "endpoints", "pods"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["extensions", "networking.k8s.io"]
+    resources: ["ingresses"]
+    verbs: ["get", "list", "watch"]
+  - nonResourceURLs: ["/metrics"]
+    verbs: ["get"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: prometheus-cluster-role-binding
+subjects:
+  - kind: ServiceAccount
+    name: prometheus-sa
+    namespace: dev
+roleRef:
+  kind: ClusterRole
+  name: prometheus-cluster-role
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: prometheus-config
+  namespace: dev
+data:
+  prometheus.yml: |
+    global:
+      scrape_interval: 30s
+      evaluation_interval: 30s
+      scrape_timeout: 10s
 
-env:
-  GKE_CLUSTER_NAME: receipt-dev-cluster
-  GKE_REGION: us-central1
-  NAMESPACE: dev
+    scrape_configs:
+      - job_name: 'receipt-backend'
+        static_configs:
+          - targets: ['receipt-backend-service.dev.svc.cluster.local:9090']
+        metrics_path: '/actuator/prometheus'
+        scrape_interval: 30s
 
-jobs:
-  deploy-monitoring:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - job_name: 'receipt-frontend'
+        static_configs:
+          - targets: ['receipt-frontend-service.dev.svc.cluster.local:22137']
+        metrics_path: '/metrics'
+        scrape_interval: 30s
 
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v1
-      with:
-        credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-
-    - name: Set up gcloud
-      uses: google-github-actions/setup-gcloud@v1
-      with:
-        project_id: eadtud
-        install_components: 'gke-gcloud-auth-plugin'
-
-    - name: Configure kubectl
-      run: |
-        gcloud container clusters get-credentials $GKE_CLUSTER_NAME --region $GKE_REGION
-
-    # Deploy main monitoring stack
-    - name: Deploy Monitoring Stack
-      run: |
-        kubectl apply -f Monitoring/graphana-prometheus-stack.yaml -n $NAMESPACE
-
-    # Add Grafana datasource configuration
-    - name: Configure Grafana Datasource
-      run: |
-        cat <<EOF | kubectl apply -n $NAMESPACE -f -
-        apiVersion: v1
-        kind: ConfigMap
-        metadata:
-          name: grafana-datasources
-          labels:
-            app: grafana
-        data:
-          datasources.yaml: |-
-            apiVersion: 1
-            datasources:
-            - name: Prometheus
-              type: prometheus
-              access: proxy
-              url: http://prometheus-service:9090
-              isDefault: true
-              version: 1
-              editable: false
-              jsonData:
-                timeInterval: "30s"
-                httpMethod: GET
-                queryTimeout: "60s"
-                httpHeaderName1: "X-Scope-OrgID"
-        EOF
-
-    # Add dashboard provider configuration
-    - name: Configure Dashboard Provider
-      run: |
-        cat <<EOF | kubectl apply -n $NAMESPACE -f -
-        apiVersion: v1
-        kind: ConfigMap
-        metadata:
-          name: grafana-dashboard-provider
-          labels:
-            app: grafana
-        data:
-          dashboard-provider.yaml: |-
-            apiVersion: 1
-            providers:
-            - name: 'default'
-              orgId: 1
-              folder: ''
-              type: file
-              disableDeletion: false
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards
-        EOF
-
-    # Add additional Grafana dashboards
-    - name: Deploy Additional Grafana Dashboards
-      run: |
-        cat <<EOF | kubectl apply -n $NAMESPACE -f -
-        apiVersion: v1
-        kind: ConfigMap
-        metadata:
-          name: grafana-dashboards
-          labels:
-            app: grafana
-        data:
-          pod-status.json: |-
-            {
-              "annotations": {
-                "list": []
-              },
-              "editable": true,
-              "fiscalYearStartMonth": 0,
-              "graphTooltip": 0,
-              "id": null,
-              "links": [],
-              "liveNow": false,
-              "panels": [
-                {
-                  "datasource": {
-                    "type": "prometheus",
-                    "uid": "prometheus"
-                  },
-                  "fieldConfig": {
-                    "defaults": {
-                      "color": {
-                        "mode": "thresholds"
-                      },
-                      "mappings": [],
-                      "thresholds": {
-                        "mode": "absolute",
-                        "steps": [
-                          {
-                            "color": "red",
-                            "value": null
-                          },
-                          {
-                            "color": "green",
-                            "value": 1
-                          }
-                        ]
-                      }
-                    },
-                    "overrides": []
-                  },
-                  "gridPos": {
-                    "h": 8,
-                    "w": 24,
-                    "x": 0,
-                    "y": 0
-                  },
-                  "id": 1,
-                  "options": {
-                    "colorMode": "value",
-                    "graphMode": "area",
-                    "justifyMode": "auto",
-                    "orientation": "auto",
-                    "reduceOptions": {
-                      "calcs": [
-                        "lastNotNull"
-                      ],
-                      "fields": "",
-                      "values": false
-                    },
-                    "textMode": "auto"
-                  },
-                  "pluginVersion": "10.4.2",
-                  "targets": [
-                    {
-                      "datasource": {
-                        "type": "prometheus",
-                        "uid": "prometheus"
-                      },
-                      "editorMode": "code",
-                      "expr": "up{job=~\"receipt-backend|receipt-frontend\"}",
-                      "legendFormat": "{{pod}}",
-                      "range": true,
-                      "refId": "A"
-                    }
-                  ],
-                  "title": "Pod Status Overview",
-                  "type": "stat"
-                }
-              ],
-              "refresh": "5s",
-              "schemaVersion": 38,
-              "style": "dark",
-              "tags": [
-                "kubernetes",
-                "pods"
-              ],
-              "templating": {
-                "list": []
-              },
-              "time": {
-                "from": "now-6h",
-                "to": "now"
-              },
-              "timepicker": {},
-              "timezone": "browser",
-              "title": "Pod Status Monitor",
-              "uid": "pod-status",
-              "version": 1,
-              "weekStart": ""
-            }
-        EOF
-
-    # Wait for deployments to be ready
-    - name: Wait for Deployments
-      run: |
-        kubectl rollout status deployment/prometheus -n $NAMESPACE
-        kubectl rollout status deployment/grafana -n $NAMESPACE
-
-    # Verify services are running
-    - name: Verify Services
-      run: |
-        kubectl get pods -n $NAMESPACE -l app=prometheus
-        kubectl get pods -n $NAMESPACE -l app=grafana
-
-    # Restart Grafana to apply new configurations
-    - name: Restart Grafana
-      run: |
-        kubectl rollout restart deployment/grafana -n $NAMESPACE
-        kubectl rollout status deployment/grafana -n $NAMESPACE
-
-    # Clean up any duplicate datasources
-    - name: Clean up duplicate datasources
-      run: |
-        kubectl delete configmap grafana-datasource-provider -n $NAMESPACE --ignore-not-found=true
-        kubectl delete configmap grafana-provisioning-datasources -n $NAMESPACE --ignore-not-found=true
+      - job_name: 'prometheus'
+        static_configs:
+          - targets: ['localhost:9090']
+        scrape_interval: 15s
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: prometheus
+  namespace: dev
+  labels:
+    app: prometheus
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: prometheus
+  template:
+    metadata:
+      labels:
+        app: prometheus
+    spec:
+      serviceAccountName: prometheus-sa
+      containers:
+        - name: prometheus
+          image: prom/prometheus:v2.37.0
+          resources:
+            requests:
+              cpu: 50m
+              memory: 128Mi
+            limits:
+              cpu: 100m
+              memory: 256Mi
+          args:
+            - "--config.file=/etc/prometheus/prometheus.yml"
+            - "--storage.tsdb.retention.time=7d"
+            - "--storage.tsdb.path=/prometheus"
+            - "--web.enable-lifecycle"
+            - "--web.enable-admin-api"
+            - "--storage.tsdb.no-lockfile"
+            - "--web.max-connections=100"
+            - "--query.timeout=1m"
+            - "--query.max-concurrency=10"
+            - "--storage.tsdb.wal-compression"
+            - "--storage.tsdb.retention.size=1GB"
+          ports:
+            - containerPort: 9090
+          volumeMounts:
+            - name: config-volume
+              mountPath: /etc/prometheus/
+            - name: prometheus-storage
+              mountPath: /prometheus
+      volumes:
+        - name: config-volume
+          configMap:
+            name: prometheus-config
+        - name: prometheus-storage
+          emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prometheus-service
+  namespace: dev
+spec:
+  selector:
+    app: prometheus
+  ports:
+    - port: 9090
+      targetPort: 9090
+      nodePort: 30090
+  type: NodePort
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-datasources
+  namespace: dev
+  labels:
+    app: grafana
+data:
+  datasources.yaml: |-
+    apiVersion: 1
+    datasources:
+      - name: Prometheus
+        type: prometheus
+        access: proxy
+        url: http://prometheus-service:9090
+        isDefault: true
+        version: 1
+        editable: false
+        jsonData:
+          timeInterval: "30s"
+          httpMethod: GET
+          queryTimeout: "60s"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-dashboard-provider
+  namespace: dev
+  labels:
+    app: grafana
+data:
+  dashboard-provider.yaml: |-
+    apiVersion: 1
+    providers:
+    - name: 'default'
+      orgId: 1
+      folder: ''
+      type: file
+      disableDeletion: false
+      editable: true
+      options:
+        path: /var/lib/grafana/dashboards
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: grafana
+  namespace: dev
+  labels:
+    app: grafana
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: grafana
+  template:
+    metadata:
+      labels:
+        app: grafana
+    spec:
+      containers:
+        - name: grafana
+          image: grafana/grafana:8.5.5
+          resources:
+            requests:
+              cpu: 50m
+              memory: 128Mi
+            limits:
+              cpu: 100m
+              memory: 256Mi
+          env:
+            - name: GF_SECURITY_ADMIN_USER
+              value: "admin"
+            - name: GF_SECURITY_ADMIN_PASSWORD
+              value: "admin"
+            - name: GF_USERS_ALLOW_SIGN_UP
+              value: "false"
+            - name: GF_AUTH_ANONYMOUS_ENABLED
+              value: "true"
+            - name: GF_AUTH_ANONYMOUS_ORG_ROLE
+              value: "Viewer"
+            - name: GF_DASHBOARDS_MIN_REFRESH_INTERVAL
+              value: "5s"
+            - name: GF_SECURITY_COOKIE_SECURE
+              value: "false"
+            - name: GF_SECURITY_ALLOW_EMBEDDING
+              value: "true"
+            - name: GF_INSTALL_PLUGINS
+              value: "grafana-piechart-panel,grafana-worldmap-panel"
+            - name: GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS
+              value: "true"
+          ports:
+            - containerPort: 3000
+          volumeMounts:
+            - name: grafana-storage
+              mountPath: /var/lib/grafana
+            - name: grafana-datasources
+              mountPath: /etc/grafana/provisioning/datasources
+            - name: grafana-dashboard-provider
+              mountPath: /etc/grafana/provisioning/dashboards
+          readinessProbe:
+            httpGet:
+              path: /api/health
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            timeoutSeconds: 1
+          livenessProbe:
+            httpGet:
+              path: /api/health
+              port: 3000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+      volumes:
+        - name: grafana-storage
+          emptyDir: {}
+        - name: grafana-datasources
+          configMap:
+            name: grafana-datasources
+        - name: grafana-dashboard-provider
+          configMap:
+            name: grafana-dashboard-provider
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: grafana-service
+  namespace: dev
+spec:
+  selector:
+    app: grafana
+  ports:
+    - port: 80
+      targetPort: 3000
+  type: LoadBalancer
