--- a/.github/workflows/MonitoringOperator.yml
+++ b/.github/workflows/MonitoringOperator.yml
@@ -32,6 +32,7 @@ jobs:
     # Deploy main monitoring stack
     - name: Deploy Monitoring Stack
       run: |
+        cd Monitoring
         kubectl apply -f graphana-prometheus-stack.yaml -n $NAMESPACE
 
     # Add Grafana datasource configuration
